--- a/.github/workflows/spellchecker.yml
+++ b/.github/workflows/spellchecker.yml
@@ -12,3 +12,5 @@ jobs:
       - uses: peter-evans/create-pull-request@v2.4.4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: 'Fixes by misspell-fixer'
+          title: 'Typos fix by misspell-fixer'
