--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,9 @@ jobs:
           - stable
           - beta
           - nightly
+        features:
+          - default
+          - deser
       
     steps:
       - uses: actions/checkout@v1
@@ -27,32 +30,32 @@ jobs:
         if: matrix.rust == 'stable' || matrix.rust == 'beta'
         with:
           command: build
-          args: --verbose
+          args: --verbose --no-default-features --features ${{ matrix.features }}
 
       - name: nightly build 
         uses: actions-rs/cargo@v1
         if: matrix.rust == 'nightly'
         with:
           command: build
-          args: --verbose --all-features
+          args: --verbose --no-default-features --features ${{ matrix.features }},nightly
 
       - name: stable/beta test 
         uses: actions-rs/cargo@v1
         if: matrix.rust == 'stable' || matrix.rust == 'beta'
         with:
           command: test
-          args: --verbose
+          args: --verbose --no-default-features --features ${{ matrix.features }}
 
       - name: nightly test
         uses: actions-rs/cargo@v1
         if: matrix.rust == 'nightly'
         with:
           command: test
-          args: --verbose --all-features
+          args: --verbose --no-default-features --features ${{ matrix.features }},nightly
 
       - name: fmt
         uses: actions-rs/cargo@v1
-        if: matrix.rust == 'nightly'
+        if: matrix.rust == 'nightly' && matrix.features == 'default'
         with:
           command: fmt
           args: --all -- --check
@@ -62,11 +65,11 @@ jobs:
         if: matrix.rust == 'stable' || matrix.rust == 'beta'
         with:
           command: clippy
-          args: --all-targets -- -D warnings
+          args: --all-targets --no-default-features --features ${{ matrix.features }} -- -D warnings
 
       - name: nightly clippy
         uses: actions-rs/cargo@v1
         if: matrix.rust == 'nightly'
         with:
           command: clippy
-          args: --all-targets --all-features -- -D warnings
+          args: --all-targets --no-default-features --features ${{ matrix.features }},nightly -- -D warnings
