--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 typenum = "1.11"
 phantasm = "0.1.1"
-serde = { version = "1.0", optional = true, features = ["derive"] }
+serde = { version = "1.0", optional = true, features = ["derive"], default-features = false }
 
 [dev-dependencies]
 trybuild = "1.0.21"
